foundation-objs/main/default/objects/Asset/fields/Features_covered_in_onboarding__c.field-meta.xml
<CustomField>
    <fullName>Features_covered_in_onboarding__c</fullName>
    <label>Features covered in onboarding</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account setup</fullName>
            </value>
            <value>
                <fullName>Data Preparation &amp; Ingestion</fullName>
            </value>
            <value>
                <fullName>Filing</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Reconciliation</fullName>
            </value>
            <value>
                <fullName>E-Invoicing</fullName>
            </value>
            <value>
                <fullName>EWB</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>