foundation-objs/main/default/objects/Asset/fields/Feedback_comments__c.field-meta.xml
<CustomField>
    <fullName>Feedback_comments__c</fullName>
    <label>Feedback comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>