foundation-objs/main/default/objects/Asset/fields/Feedback_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Feedback_End_Date__c</fullName>
    <label>Feedback End Date</label>
    <type>Date</type>
</CustomField>