foundation-objs/main/default/objects/Asset/fields/Feedback_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Start_Date__c</fullName>
    <label>Feedback Start Date</label>
    <type>Date</type>
</CustomField>