foundation-objs/main/default/objects/Asset/fields/Finance_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Date__c</fullName>
    <description>Finance Approval Date of the Opportunity</description>
    <formula>Opportunity__r.Finance_Approval_Rejection_Date__c</formula>
    <label>Finance Approval Date</label>
    <type>Date</type>
</CustomField>