foundation-objs/main/default/objects/Asset/fields/First_Churn_Reason_L1__c.field-meta.xml
<CustomField>
    <fullName>First_Churn_Reason_L1__c</fullName>
    <label>Churn / Risk Reason L1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Experience with cleartax is not great</fullName>
            </value>
            <value>
                <fullName>Much better service providers</fullName>
            </value>
            <value>
                <fullName>Do not see value in the product</fullName>
            </value>
            <value>
                <fullName>Self goals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>