foundation-objs/main/default/objects/Asset/fields/First_Churn_Reason_L2__c.field-meta.xml
<CustomField>
    <fullName>First_Churn_Reason_L2__c</fullName>
    <label>Churn / Risk Reason L2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>First_Churn_Reason_L1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airline credit account</fullName>
            </value>
            <value>
                <fullName>Cancellation of E-invoice &amp; Ewaybill issue</fullName>
            </value>
            <value>
                <fullName>Company POC left the organization</fullName>
            </value>
            <value>
                <fullName>Company Restructuring / external factors</fullName>
            </value>
            <value>
                <fullName>Competitor offered better service / product feature</fullName>
            </value>
            <value>
                <fullName>Competitor offering significant discount / Govt tender</fullName>
            </value>
            <value>
                <fullName>Custom print templates required by client</fullName>
            </value>
            <value>
                <fullName>Do not have contact of the KAM / support team</fullName>
            </value>
            <value>
                <fullName>Download of E-invoice &amp; Ewaybill issue</fullName>
            </value>
            <value>
                <fullName>Einvoice with other vendor hence lost ASP / Ewaybill</fullName>
            </value>
            <value>
                <fullName>Filing of GST returns issue</fullName>
            </value>
            <value>
                <fullName>Free usage</fullName>
            </value>
            <value>
                <fullName>G1 auto populated from Einv / low value seen in ASP product and vice versa</fullName>
            </value>
            <value>
                <fullName>Generation of E-invoice &amp; Ewaybill issue</fullName>
            </value>
            <value>
                <fullName>Govt tool is easier</fullName>
            </value>
            <value>
                <fullName>Ingestion of Sales/Purchase Data issue</fullName>
            </value>
            <value>
                <fullName>INT-Delayed integration</fullName>
            </value>
            <value>
                <fullName>INT-Did not get required support during Integration / Slow response for Integration</fullName>
            </value>
            <value>
                <fullName>Integrated with Govt API directly</fullName>
            </value>
            <value>
                <fullName>INT- Integration not properly done</fullName>
            </value>
            <value>
                <fullName>Low Invoice count</fullName>
            </value>
            <value>
                <fullName>Managed Services did not meet the client timelines / output quality expectations</fullName>
            </value>
            <value>
                <fullName>Management Mandate for Big 4</fullName>
            </value>
            <value>
                <fullName>OBD-Delay in onboarding / incomplete onboarding / support issue</fullName>
            </value>
            <value>
                <fullName>OBD- Did not get proper training / no training</fullName>
            </value>
            <value>
                <fullName>Other Product Issues</fullName>
            </value>
            <value>
                <fullName>OTP was incorrectly marked as ARR</fullName>
            </value>
            <value>
                <fullName>Prefers local CA</fullName>
            </value>
            <value>
                <fullName>Printing of E-invoice &amp; Ewaybill issue</fullName>
            </value>
            <value>
                <fullName>Queries were unanswered / Not getting enough support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>