foundation-objs/main/default/objects/Asset/fields/First_Churn_Reason_L3__c.field-meta.xml
<CustomField>
    <fullName>First_Churn_Reason_L3__c</fullName>
    <label>Churn / Risk Reason L3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>First_Churn_Reason_L1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Free usage of product after period end date hence renewal not done</fullName>
            </value>
            <value>
                <fullName>9/9C</fullName>
            </value>
            <value>
                <fullName>Additional adhoc customized request from Client and SI is taking time to close the bug/request</fullName>
            </value>
            <value>
                <fullName>Additional measurement parameters, lines, currency options required</fullName>
            </value>
            <value>
                <fullName>Additional request after the completion of integration</fullName>
            </value>
            <value>
                <fullName>Airline credit account loss due to low invoices</fullName>
            </value>
            <value>
                <fullName>APIs</fullName>
            </value>
            <value>
                <fullName>Big4 offered lower price</fullName>
            </value>
            <value>
                <fullName>Branch level access is not available in CT</fullName>
            </value>
            <value>
                <fullName>Business slowdown / degrowth</fullName>
            </value>
            <value>
                <fullName>Cleartax Integration team could not fulfill the customer requirements</fullName>
            </value>
            <value>
                <fullName>Client can comfortably use govt portal as it is free and he does not want to pay for the services which are available free of cost</fullName>
            </value>
            <value>
                <fullName>Client does not have the mandatory headers required by CT software</fullName>
            </value>
            <value>
                <fullName>Client ERP getting migrated</fullName>
            </value>
            <value>
                <fullName>Client expects on call IT expert from CT</fullName>
            </value>
            <value>
                <fullName>Client expects on call IT expert from CT / better technical support</fullName>
            </value>
            <value>
                <fullName>Client is getting additional services from CA (advisory, in office visits)</fullName>
            </value>
            <value>
                <fullName>Client IT team is not from India</fullName>
            </value>
            <value>
                <fullName>Client moved to CA as it is more cost effective for client</fullName>
            </value>
            <value>
                <fullName>Client only using some of CT products and the competitor offered a lucrative whole package deal</fullName>
            </value>
            <value>
                <fullName>Client prioritizes other projects over integration</fullName>
            </value>
            <value>
                <fullName>Client was not willing to pay ARR</fullName>
            </value>
            <value>
                <fullName>Client was offered highly discounted prices by competitors</fullName>
            </value>
            <value>
                <fullName>Clients&apos; IT team is confident with Govt portal and well equipped to problem solve adhoc issues if they come up</fullName>
            </value>
            <value>
                <fullName>Competition offering end to end solution</fullName>
            </value>
            <value>
                <fullName>Contacts of the decision maker are missing</fullName>
            </value>
            <value>
                <fullName>CT integration taking time, thus moved to Tally prime</fullName>
            </value>
            <value>
                <fullName>Customer expected timelines were not met</fullName>
            </value>
            <value>
                <fullName>Customer more comfortable in using Tally software (data management tool)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>