foundation-objs/main/default/objects/Asset/fields/First_escalation_date__c.field-meta.xml
<CustomField>
    <fullName>First_escalation_date__c</fullName>
    <description>Latest date on which the usage occurred against the asset</description>
    <label>First Escalation Date</label>
    <type>Date</type>
</CustomField>