foundation-objs/main/default/objects/Asset/fields/First_onboarding_session_date__c.field-meta.xml
<CustomField>
    <fullName>First_onboarding_session_date__c</fullName>
    <description>Date of the first onboarding session</description>
    <label>First onboarding session date</label>
    <type>Date</type>
</CustomField>