foundation-objs/main/default/objects/Asset/fields/First_unaided_usage_date__c.field-meta.xml
<CustomField>
    <fullName>First_unaided_usage_date__c</fullName>
    <description>first usage date greater than onboarding completed date</description>
    <label>First unaided usage date</label>
    <type>Date</type>
</CustomField>