foundation-objs/main/default/objects/Asset/fields/First_usage_date__c.field-meta.xml
<CustomField>
    <fullName>First_usage_date__c</fullName>
    <label>First usage date</label>
    <type>Date</type>
</CustomField>