foundation-objs/main/default/objects/Asset/fields/First_usage_date_post_1st_of_last_month__c.field-meta.xml
<CustomField>
    <fullName>First_usage_date_post_1st_of_last_month__c</fullName>
    <label>First usage date post 1st of last month</label>
    <type>Date</type>
</CustomField>