foundation-objs/main/default/objects/Asset/fields/Flag_for_Asset_Sucess__c.field-meta.xml
<CustomField>
    <fullName>Flag_for_Asset_Sucess__c</fullName>
    <label>Flag for Asset Sucess</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success Pending</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Historic</fullName>
            </value>
            <value>
                <fullName>Usage not Tracked</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>