foundation-objs/main/default/objects/Asset/fields/FY_Closed_Opportunity_Date__c.field-meta.xml
<CustomField>
    <fullName>FY_Closed_Opportunity_Date__c</fullName>
    <formula>IF( NOT( ISNULL( Renewal_Opportunity__c ) ) ,  Renewal_Opportunity__r.CloseDate  , null)</formula>
    <label>FY Closed Opportunity Date</label>
    <type>Date</type>
</CustomField>