foundation-objs/main/default/objects/Asset/fields/FY_Renewal_Amount__c.field-meta.xml
<CustomField>
    <fullName>FY_Renewal_Amount__c</fullName>
    <description>Future Year Renewal Amount.</description>
    <formula>IF( NOT( ISNULL( Renewal_Opportunity__c ) ) ,  Renewal_Opportunity__r.Actual_Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FY Renewal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>