foundation-objs/main/default/objects/Asset/fields/FY_Renewal_PO_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FY_Renewal_PO_Start_Date__c</fullName>
    <formula>IF( NOT( ISNULL( Renewal_Opportunity__c ) ) ,  Renewal_Opportunity__r.Period_Start_date__c , null)</formula>
    <label>FY Renewal PO Start Date</label>
    <type>Date</type>
</CustomField>