foundation-objs/main/default/objects/Asset/fields/Handed_over_to_kam__c.field-meta.xml
<CustomField>
    <fullName>Handed_over_to_kam__c</fullName>
    <formula>if(ISBLANK(CSM_KAM_handover__c),&quot;No&quot;,&quot;Yes&quot;)</formula>
    <label>Handed over to kam ?</label>
    <type>Text</type>
</CustomField>