foundation-objs/main/default/objects/Asset/fields/Identity_Resource_Constraints__c.field-meta.xml
<CustomField>
    <fullName>Identity_Resource_Constraints__c</fullName>
    <label>Identity Resource Constraints</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>