foundation-objs/main/default/objects/Asset/fields/If_Others_in_Activation_Pending__c.field-meta.xml
<CustomField>
    <fullName>If_Others_in_Activation_Pending__c</fullName>
    <label>Client Interaction Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>