foundation-objs/main/default/objects/Asset/fields/In_house_project__c.field-meta.xml
<CustomField>
    <fullName>In_house_project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Derived from source opportunity</description>
    <label>In-House Project</label>
    <type>Checkbox</type>
</CustomField>