foundation-objs/main/default/objects/Asset/fields/Integration_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Integration_Completed_Date__c</fullName>
    <label>Integration Completed Date</label>
    <type>Date</type>
</CustomField>