foundation-objs/main/default/objects/Asset/fields/Integration_end_date__c.field-meta.xml
<CustomField>
    <fullName>Integration_end_date__c</fullName>
    <label>Integration end date</label>
    <type>Date</type>
</CustomField>