foundation-objs/main/default/objects/Asset/fields/Integration_pending_reason__c.field-meta.xml
<CustomField>
    <fullName>Integration_pending_reason__c</fullName>
    <label>Integration pending reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>