foundation-objs/main/default/objects/Asset/fields/Integration_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Integration_Start_date__c</fullName>
    <label>Integration Start date</label>
    <type>Date</type>
</CustomField>