foundation-objs/main/default/objects/Asset/fields/Integration_status__c.field-meta.xml
<CustomField>
    <fullName>Integration_status__c</fullName>
    <label>Integration status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI Assigned</fullName>
            </value>
            <value>
                <fullName>Awaiting kick-off</fullName>
            </value>
            <value>
                <fullName>Project Plan</fullName>
            </value>
            <value>
                <fullName>Build in progress</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Project complete</fullName>
            </value>
            <value>
                <fullName>On-hold (&lt;30 Days)</fullName>
            </value>
            <value>
                <fullName>On-hold (&gt;30 Days)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>