foundation-objs/main/default/objects/Asset/fields/Invoice_Raised__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Raised__c</fullName>
    <description>Total amount for which invoices have been raised for the asset</description>
    <inlineHelpText>Total amount for which invoices have been raised for the asset</inlineHelpText>
    <label>Invoice Raised</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>