foundation-objs/main/default/objects/Asset/fields/IRN_EWB_invoice__c.field-meta.xml
<CustomField>
    <fullName>IRN_EWB_invoice__c</fullName>
    <formula>License_No_of_IRNs_used__c + License_No_of_EWBs_used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IRN + EWB invoice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>