foundation-objs/main/default/objects/Asset/fields/Is_Activation_Delayed__c.field-meta.xml
<CustomField>
    <fullName>Is_Activation_Delayed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Activation Delayed?</label>
    <type>Checkbox</type>
</CustomField>