foundation-objs/main/default/objects/Asset/fields/Is_Asset_Success__c.field-meta.xml
<CustomField>
    <fullName>Is_Asset_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Asset Success?</label>
    <type>Checkbox</type>
</CustomField>