foundation-objs/main/default/objects/Asset/fields/Is_Escalation_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Escalation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Escalation Required?</label>
    <type>Checkbox</type>
</CustomField>