foundation-objs/main/default/objects/Asset/fields/Is_License_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_License_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is License Created?</label>
    <type>Checkbox</type>
</CustomField>