foundation-objs/main/default/objects/Asset/fields/is_renewed__c.field-meta.xml
<CustomField>
    <fullName>is_renewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is renewed</label>
    <type>Checkbox</type>
</CustomField>