foundation-objs/main/default/objects/Asset/fields/Keka_Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Keka_Project_Code__c</fullName>
    <label>Keka_Project_Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>