foundation-objs/main/default/objects/Asset/fields/Kick_off_aging__c.field-meta.xml
<CustomField>
    <fullName>Kick_off_aging__c</fullName>
    <formula>Kick_off_end_date__c  -  Kick_off_start_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kick off aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>