foundation-objs/main/default/objects/Asset/fields/Kick_off_aging_from_beginning__c.field-meta.xml
<CustomField>
    <fullName>Kick_off_aging_from_beginning__c</fullName>
    <formula>Kick_off_end_date__c -  Onboarding_process_start_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kick off aging from beginning</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>