foundation-objs/main/default/objects/Asset/fields/Kick_off_end_date__c.field-meta.xml
<CustomField>
    <fullName>Kick_off_end_date__c</fullName>
    <label>Kick-off end date</label>
    <type>Date</type>
</CustomField>