foundation-objs/main/default/objects/Asset/fields/Kick_off_start_date__c.field-meta.xml
<CustomField>
    <fullName>Kick_off_start_date__c</fullName>
    <description>Call with the client to discuss the business questionnaire</description>
    <label>Kick-off start date</label>
    <type>Date</type>
</CustomField>