foundation-objs/main/default/objects/Asset/fields/Kick_off_status__c.field-meta.xml
<CustomField>
    <fullName>Kick_off_status__c</fullName>
    <label>Kick-off  status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be started</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>