foundation-objs/main/default/objects/Asset/fields/Last_Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Interaction_Date__c</fullName>
    <inlineHelpText>Please add the last time you have interacted with the client</inlineHelpText>
    <label>Last Interaction Date</label>
    <type>Date</type>
</CustomField>