foundation-objs/main/default/objects/Asset/fields/Last_Invoice_Raised_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Raised_Date__c</fullName>
    <description>Date on which the latest invoice has been raised for the asset</description>
    <label>Last Invoice Raised Date</label>
    <type>Date</type>
</CustomField>