foundation-objs/main/default/objects/Asset/fields/last_metabase_sync_time__c.field-meta.xml
<CustomField>
    <fullName>last_metabase_sync_time__c</fullName>
    <label>Last Metabase Sync Time</label>
    <type>Date</type>
</CustomField>