foundation-objs/main/default/objects/Asset/fields/Last_Onboarding_session_date__c.field-meta.xml
<CustomField>
    <fullName>Last_Onboarding_session_date__c</fullName>
    <description>The date of the last onboarding session. The day onboarding is completed.</description>
    <label>Last Onboarding session date</label>
    <type>Date</type>
</CustomField>