foundation-objs/main/default/objects/Asset/fields/Last_Payment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Received_Date__c</fullName>
    <description>Payment last made by customer for the underlying asset</description>
    <label>Last Payment Received Date</label>
    <type>Date</type>
</CustomField>