foundation-objs/main/default/objects/Asset/fields/Last_Usage_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Usage_Date__c</fullName>
    <description>Latest date on which the usage occurred against the asset</description>
    <label>Last Usage Date</label>
    <type>Date</type>
</CustomField>