foundation-objs/main/default/objects/Asset/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Customer Event</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Google AdWords</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>MQL</fullName>
            </value>
            <value>
                <fullName>NAL</fullName>
            </value>
            <value>
                <fullName>Channel Referral</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>CA Referral</fullName>
            </value>
            <value>
                <fullName>One To Many</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>POC</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
            <value>
                <fullName>Quote Management</fullName>
            </value>
            <value>
                <fullName>#N/A</fullName>
            </value>
            <value>
                <fullName>E-Invoicing</fullName>
            </value>
            <value>
                <fullName>ASP/GSP; E-way Bill</fullName>
            </value>
            <value>
                <fullName>ASP/GSP; E-Invoicing</fullName>
            </value>
            <value>
                <fullName>Sales Drip Campaign</fullName>
            </value>
            <value>
                <fullName>Self - serve</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Self Generated</fullName>
            </value>
            <value>
                <fullName>Procured Externally</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>