foundation-objs/main/default/objects/Asset/fields/Legal_Entity_Name_Of_The_Client__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name_Of_The_Client__c</fullName>
    <label>Legal Entity Name Of The Client</label>
    <type>TextArea</type>
</CustomField>