foundation-objs/main/default/objects/Asset/fields/License_Activated_On__c.field-meta.xml
<CustomField>
    <fullName>License_Activated_On__c</fullName>
    <label>License Activated On</label>
    <type>Date</type>
</CustomField>