foundation-objs/main/default/objects/Asset/fields/License_additional_fields_for_activation__c.field-meta.xml
<CustomField>
    <fullName>License_additional_fields_for_activation__c</fullName>
    <label>Additional features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2FA</fullName>
            </value>
            <value>
                <fullName>Audit Trail</fullName>
            </value>
            <value>
                <fullName>Branch Level Access</fullName>
            </value>
            <value>
                <fullName>Maker - Checker</fullName>
            </value>
            <value>
                <fullName>PAN Module</fullName>
            </value>
            <value>
                <fullName>Custom Roles</fullName>
            </value>
            <value>
                <fullName>Multiple Workspaces</fullName>
            </value>
            <value>
                <fullName>Feature request and tracking</fullName>
            </value>
            <value>
                <fullName>Domain Name Check</fullName>
            </value>
            <value>
                <fullName>Spynet</fullName>
            </value>
            <value>
                <fullName>Auto Log out</fullName>
            </value>
            <value>
                <fullName>Group Clients/ Offices</fullName>
            </value>
            <value>
                <fullName>Teams in LP0/ LP1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>